--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -17,4 +17,5 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+authToken=jp_uddv5k0ra4kfud9j3dan405ckj
 
