--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -5,34 +5,26 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
-        
-
+        classpath 'com.android.tools.build:gradle:3.2.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    
 }
 
 allprojects {
+
     repositories {
         google()
         jcenter()
         maven {
-            url "https://gitlab.com/api/v4/projects/25604373/packages/maven"
-            name "GitLab"
-            credentials(HttpHeaderCredentials) {
-                name = 'Private-Token'
-                value = "{private_token}"
-            }
-            authentication {
-                header(HttpHeaderAuthentication)
-            }
+            url "https://jitpack.io"
+            credentials { username authToken }
         }
-        maven { url 'https://jitpack.io' }
     }
+
 }
 
 task clean(type: Delete) {
