--- a/Android/gradle.properties
+++ b/Android/gradle.properties
@@ -17,5 +17,6 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+android.enableR8=true
 authToken=jp_24lgk4vmsoikb7u2uvaminbshj
 
